Reload window after every 10s.

--- a/views/projects.html.erb
+++ b/views/projects.html.erb
@@ -1,6 +1,9 @@
 <html>
   <head>
     <link href="projects.css" rel="stylesheet" type="text/css">
+    <script>
+      window.setTimeout(function() { window.location.reload(true); }, 10000);
+    </script>
   </head>
   <ul class="projects">
   <% @projects.each do |project| %>
